--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html>
- <head>
-   <link rel="stylesheet" type="text/css" href="styles.css">
-   <script>
-     function handleSubmit(event) {
-       event.preventDefault();
-       var username = event.target.elements.username.value;
-       var password = event.target.elements.password.value;
-       if (username === 'admin' && password === 'admin') {
-         window.location.href = 'account.html';
-       } else {
-         alert('Invalid username or password');
-       }
-     }
-   </script>
- </head>
- <body>
-   <div class="login-container">
-     <h2>Login</h2>
-     <form onsubmit="handleSubmit(event)">
-       <input type="text" name="username" placeholder="Username">
-       <input type="password" name="password" placeholder="Password">
-       <button type="submit">Log In</button>
-     </form>
-   </div>
- </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <script>
+      function handleSubmit(event) {
+        event.preventDefault();
+        var username = event.target.elements.username.value;
+        var password = event.target.elements.password.value;
+        if (username === 'admin' && password === 'admin') {
+          window.location.href = '/account.html';
+        } else {
+          alert('Invalid username or password');
+        }
+      }
+    </script>
+  </head>
+  <body>
+    <div class="login-container">
+      <h2>Login</h2>
+      <form onsubmit="handleSubmit(event)">
+        <input type="text" name="username" placeholder="Username">
+        <input type="password" name="password" placeholder="Password">
+        <button type="submit">Log In</button>
+      </form>
+    </div>
+  </body>
 </html>
