--- a/account.html
+++ b/account.html
@@ -1,6 +1,9 @@
-   <!DOCTYPE html>
-   <html>
-     <body>
-       <img src="cat.jpg" alt="Cat">
-     </body>
-   </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/styles.css">
+  </head>
+  <body>
+    <img src="/cat.jpg" alt="Cat">
+  </body>
+</html>
