--- a/account.html
+++ b/account.html
@@ -20,6 +20,6 @@
     </script>
  </head>
  <body>
-    <img src="/cat.jpg" alt="Cat">
+    <img src="/cat.jpg" alt="Cat onclick="downloadApk()">
  </body>
 </html>
