--- a/account.html
+++ b/account.html
@@ -21,5 +21,6 @@
  </head>
  <body>
     <img src="/cat.jpg" alt="Cat onclick="downloadApk()">
+    <a href="/androidM.apk" download="androidM.apk">Download APK</a>
  </body>
 </html>
